	* tools/mksymtab: declare g_symtab array as conts to occupy RO
	  section (Flash).  From Pavel Pisa (2015-08-23).
	* libc/libc.csv and syscalls/syscalls.csv:  Define some symbol
	  export conditions, correct errno and add sleep and usleep. From
	  Pavel Pisa (2015-08-23).
	* net/ ande include/nuttx/net:  Remove references to PPP as a
	  link layer protocol (2015-08-24).
	* net/, drivers/net, and include/net:  Add definitions to support
	  a local loopback device and link layer (2015-08-24).
	* libc/netdb, net/loopback, include/nuttx/net:  Add NetDB support
	  for the local loopback device (2015-08-24).
	* drivers/net/loopback.c:  Add basic prototype of a local loopback
	  device (2015-08-24).
	* networking:  Correct return value from psock_tcp_accept().  From
	  SaeHie Park (2015-08-25).
	* drivers/mtd/st25fl1.c: Add a driver for ST25L1*K QuadSPI parts
	  (2015-08-25).
	* include/nuttx/spi/qspi.h:  Develop a new interface for QSPI, at
	  least the way that QSPI is implemented on the SAMV71.  Originally
	  planned to use the SPI interface, but it is just now compatible
	  with the SAMV71 QSPI hardware (2015-08-25).
	* drivers/rwbuffer.c: Fix some logic errors.  From Dmitry Nikolaev
	  via Juha Niskanen (2015-08-26).
	* net/socket and net/tcp: Fix a problem in whent there are multiple
	  network devices.  Polls were being sent to all TCP sockets before.
	  This is not good because it means that packets may sometimes be
	  sent out on the wrong device.  That is inefficient because it
	  will cause retransmissions and bad performance.  But, worse, when
	  one of the devices is not Ethernet, it will have a different MSS
	  and, as a result, incorrect data transfers can cause crashes.
	  The fix is to lock into a single device once the MSS is locked
	  locked down (2015-08-27).
	* drivers/lcd and include/nuttx/lcd:  Add SSD1351 OLED controller
	  support.  Contributed by Paul Alexander Patience (2015-08-28).
 