@@ -46,6 +46,8 @@
 #include <sys/types.h>
 #include <stdint.h>
 
+#include <nuttx/fs/ioctl.h>
+
 /****************************************************************************
  * Pre-processor Definitions
  ****************************************************************************/
